--- a/app/src/main/res/layout/fragment_infoweb.xml
+++ b/app/src/main/res/layout/fragment_infoweb.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <WebView
-        android:id="@+id/info_web_WV"
+        android:id="@+id/f_info_web"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
