--- a/app/src/main/res/layout/fragment_tickerlist.xml
+++ b/app/src/main/res/layout/fragment_tickerlist.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <ListView
-        android:id="@+id/ticker_LV"
+        android:id="@+id/ticker_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
